プロフィールページの作成

--- a/app/views/partial/_navbar.html.erb
+++ b/app/views/partial/_navbar.html.erb
@@ -12,7 +12,7 @@
         <a class="nav-link" href="#">sample</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">sample</a>
+        <%= link_to "マイページ", user_path(current_user), class: "nav-link" %>
       </li>
     </ul>
   </div>
